# assignment-7-mob

./: 1test.c  2test.c  CMakeLists.txt  README.md  stack  stack.c  taylor_sine.c  taylor_sine.h  taylor_sine_test  taylor_sine_test.c
tests/: tests 2.cpp  tests.cpp
